// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should render 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 gzGczR"
    color="info"
  />
</div>
`;

exports[`Spinner should render a danger color 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 djZpGA"
    color="danger"
  />
</div>
`;

exports[`Spinner should render a hint color 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 dCxsyl"
    color="hint"
  />
</div>
`;

exports[`Spinner should render a info color 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 gzGczR"
    color="info"
  />
</div>
`;

exports[`Spinner should render a large one 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 hBuPLR"
    color="info"
  />
</div>
`;

exports[`Spinner should render a small one 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 jaZOXR"
    color="info"
  />
</div>
`;

exports[`Spinner should render a success color 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 bqxwma"
    color="success"
  />
</div>
`;

exports[`Spinner should render a warning color 1`] = `
<div>
  <div
    class="Spinner-sc-1tybciv-0 loUEmj"
    color="warning"
  />
</div>
`;
